@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.36 2007/09/23 18:56:09 reho Exp $
+dnl $Id: configure.ac,v 1.37 2008/07/01 17:10:35 reho Exp $
 
 AC_INIT(amavisd-milter, 1.3.1)
 AC_CONFIG_SRCDIR(aclocal/acinclude.m4)
@@ -18,7 +18,7 @@ ACX_PTHREAD([LIBS="$PTHREAD_LIBS $LIBS" CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
 AC_TYPE_MODE_T
 AC_TYPE_SIZE_T
 AC_HEADER_DIRENT
-AC_CHECK_DIRENT_D_NAMLEN
+AC_STRUCT_DIRENT_D_NAMLEN
 AC_HEADER_STDC
 AC_HEADER_STDBOOL
 AC_HEADER_TIME
